Default Page - Hero Section - fix spacing

--- a/styles/layout/_section-hero.scss
+++ b/styles/layout/_section-hero.scss
@@ -218,12 +218,20 @@
         background-size: cover;
     }
 
+    .wrapper {
+        padding-top: 100px;
+    }
+
     @media (max-width: 1399px) {
         padding: 100px 0;
     }
 
     @media (max-width: 1199px) {
         padding: 80px 0;
+
+        .wrapper {
+            padding-top: 90px;
+        }
 
         .heading.dashed {
             margin-bottom: 0;
